# contract-interaction

./: .env.example  Cargo.toml
src/: constant.rs  main.rs  metadata.rs
src/abis/: Campaign.json  CampaignFactory.json
